<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="26dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="onAddStoryReturnButtonClicked"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/story_add"
            android:textColor="#3c4b5d"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/story_add_hint"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/storyImgView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/btnChooseStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/story_choose" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/circular_border_solid"
            android:gravity="center"
            android:padding="18dp">

            <EditText
                android:id="@+id/storyCaptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/story_caption_hint"
                android:inputType="text"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnShareStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/next"
            android:padding="16dp"
            android:text="@string/story_share"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
